# superconvert

./: .gitignore  FORMATS.md  README.md  index.html  package-lock.json  package.json  release.py  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cli/: Cargo.toml
src-tauri/cli/src/: main.rs  notify.rs
src-tauri/cli/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/engine/: Cargo.toml
src-tauri/engine/src/: archive.rs  audio.rs  data.rs  document.rs  image.rs  lib.rs  presentation.rs  spreadsheet.rs  traits.rs  types.rs  video.rs
src-tauri/src/: lib.rs  orchestrator.rs
src-tauri/src/commands/: context_menu.rs  convert.rs  mod.rs
src-tauri/src/engine/: archive.rs  audio.rs  data.rs  document.rs  error.rs  image.rs  mod.rs  textdoc.rs  traits.rs  types.rs  video.rs
src/components/: ConvertButton.tsx  DropZone.tsx  FileList.tsx  FormatPicker.tsx  OutputFolderPicker.tsx  ProgressBar.tsx  QualitySlider.tsx  SettingsPage.tsx  language-toggle.tsx  mode-toggle.tsx  theme-provider.tsx
src/components/ui/: switch.tsx
src/hooks/: useConversion.ts
src/i18n/: index.ts
src/i18n/locales/ar/: translation.json
src/i18n/locales/de/: translation.json
src/i18n/locales/en/: translation.json
src/i18n/locales/es/: translation.json
src/i18n/locales/fr/: translation.json
src/i18n/locales/hi/: translation.json
src/i18n/locales/it/: translation.json
src/i18n/locales/ja/: translation.json
src/i18n/locales/ko/: translation.json
src/i18n/locales/pt/: translation.json
src/i18n/locales/ru/: translation.json
src/i18n/locales/tr/: translation.json
src/i18n/locales/zh/: translation.json
src/lib/: tauri-bridge.ts  utils.ts
src/types/: conversion.ts
