[workspace]
members = ["engine", "cli"]

[package]
name = "superconvert"
version = "0.0.8"
description = "SuperConvert - A fast cross-platform file converter"
authors = ["cleme"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
heif = ["superconvert-engine/heif"]
raw-photos = ["superconvert-engine/raw-photos"]
jxl = ["superconvert-engine/jxl"]
jpeg2000 = ["superconvert-engine/jpeg2000"]
mp3-encode = ["superconvert-engine/mp3-encode"]
vorbis-encode = ["superconvert-engine/vorbis-encode"]
opus-encode = ["superconvert-engine/opus-encode"]
ffmpeg = ["superconvert-engine/ffmpeg"]
rar = ["superconvert-engine/rar"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# === Engine crate ===
superconvert-engine = { path = "engine" }

# === Tauri ===
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Async / Parallelism ===
tokio = { version = "1", features = ["full"] }
rayon = "1.10"

# === Error handling ===
anyhow = "1"

# === Logging ===
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# === Platform: Windows context menu ===
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
